--- a/index.html
+++ b/index.html
@@ -14,20 +14,22 @@
     <meta property="og:url" content="#" />
     <meta property="og:title" content="Studio MR - Beleza & Bem-Estar Premium" />
     <meta property="og:description" content="Sua transformação começa aqui! Descubra nossos serviços premium de beleza e bem-estar." />
-    <meta property="og:image" content="/lovable-uploads/7bea0c57-deef-419a-a5a9-2b3db27ce864.png" />
+    <meta property="og:image" content="/lovable-uploads/fe23e7bd-ba10-4cce-beb5-c10789635890.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="#" />
     <meta property="twitter:title" content="Studio MR - Beleza & Bem-Estar Premium" />
     <meta property="twitter:description" content="Sua transformação começa aqui! Descubra nossos serviços premium de beleza e bem-estar." />
-    <meta property="twitter:image" content="/lovable-uploads/7bea0c57-deef-419a-a5a9-2b3db27ce864.png" />
+    <meta property="twitter:image" content="/lovable-uploads/fe23e7bd-ba10-4cce-beb5-c10789635890.png" />
 
     <!-- Favicon -->
-    <link rel="icon" href="/lovable-uploads/7bea0c57-deef-419a-a5a9-2b3db27ce864.png" type="image/png">
+    <link rel="icon" href="/lovable-uploads/logo.png" type="image/png">
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap&text=Studio%20MR" rel="stylesheet"
+/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Playfair+Display:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     
@@ -48,7 +50,7 @@
       },
       "openingHours": "Mo-Fr 09:00-19:00, Sa 08:00-17:00",
       "priceRange": "$$",
-      "image": "/lovable-uploads/7bea0c57-deef-419a-a5a9-2b3db27ce864.png"
+      "image": "/lovable-uploads/fe23e7bd-ba10-4cce-beb5-c10789635890.png"
     }
     </script>
   </head>
